--- a/src/app/coursetype/add-coursetype/add-coursetype.component.html
+++ b/src/app/coursetype/add-coursetype/add-coursetype.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Add Course Type</h4>
+                <h4 class="page-title"> Add Restaurant Type</h4>
 
             </div>
         </div>
@@ -20,7 +20,7 @@
 
             <div class="row">
 
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <label for="">Course Type </label>
 
                     <!-- <select name="" id="" class="form-control" [(ngModel)]="ctype" [ngClass]="{ 'is-invalid': submitted && f.ctype.errors }" formControlName="ctype">
