--- a/src/app/home/category/category.component.html
+++ b/src/app/home/category/category.component.html
@@ -31,25 +31,31 @@
                     <!-- ID Column -->
                     <ng-container matColumnDef="id">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.cat_id}} </mat-cell>
                     </ng-container>
 
                     <!-- Category Name Column -->
                     <ng-container matColumnDef="categoryname">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Category Name</mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.category}}% </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.category_name}} </mat-cell>
                     </ng-container>
 
                     <!--  Image Column -->
                     <ng-container matColumnDef="image">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Image </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.image}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> <img src="{{apiUrl}}/category/get/image/{{row._id}}" alt="" style="width: 100px;"> </mat-cell>
                     </ng-container>
 
                     <!-- Action Column -->
                     <ng-container matColumnDef="action">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> <i class="fa fa-edit"></i> </mat-cell>
+                        <mat-cell *matCellDef="let row">
+                            <button class="btn btn-success" (click)=edit(row)><i class="fa fa-edit" style="color: white;"></i></button> &nbsp;
+
+                            <button class="btn btn-warning" *ngIf="row.category_state == 'Inactive'">Active </button>&nbsp;
+                            <button class="btn btn-danger" *ngIf="row.category_state == 'Active'">In-Active  </button>
+
+                        </mat-cell>
                     </ng-container>
 
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
