--- a/src/app/home/shop-menu/shop-menu.component.html
+++ b/src/app/home/shop-menu/shop-menu.component.html
@@ -10,9 +10,9 @@
 
             <div class="col-sm-4">
                 <div class="row">
-                    <h4 class="page-title">SHOP MENU</h4>
+                    <h4 class="page-title">RESTAURANT MENU</h4>
                     <button class="btn btn-primary" style="height: 33px;
-                    margin-left: 23px;" routerLink="/addshopmenu"> Add Shop Menu</button>
+                    margin-left: 23px;" routerLink="/addshopmenu"> Add Restaurant Menu</button>
                 </div>
             </div>
             <div class="col-sm-2">
@@ -51,7 +51,7 @@
                     <!--Menu Name Column -->
                     <ng-container matColumnDef="menuname">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Menu Name</mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.shopname}}% </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.menu_id.menu_name}} </mat-cell>
                     </ng-container>
 
                     <!-- Quantity Column
