--- a/src/app/settings/price-updator/add-price-updator/add-price-updator.component.html
+++ b/src/app/settings/price-updator/add-price-updator/add-price-updator.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Price Updator</h4>
+                <h4 class="page-title"> Price Updater</h4>
 
             </div>
         </div>
@@ -23,7 +23,7 @@
                     <label for="">Shop Name </label>
 
                     <select name="" id="" class="form-control" [(ngModel)]="sname" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
-                        <option value="Choose a option" disabled selected>Choose a option </option>
+                        <option value="" disabled selected>Choose a option </option>
                         <option value="">Adhitya</option>
                         <option value="">Blackforest</option>
                         <option value="">Anandbhavan</option>
@@ -40,7 +40,7 @@
                     <label for="">Select Price </label>
 
                     <select name="" id="" class="form-control" [(ngModel)]="sprice" [ngClass]="{ 'is-invalid': submitted && f.sprice.errors }" formControlName="sprice">
-                        <option value="Choose a option" disabled selected>Choose a option </option>
+                        <option value="" disabled selected>Choose a option </option>
                         <option value="">Purchase Rate</option>
                         <option value="">Sales Rate</option>
                         <option value="">Discount Amount</option>
