--- a/src/app/settings/price-updator/price-updator.component.html
+++ b/src/app/settings/price-updator/price-updator.component.html
@@ -8,12 +8,12 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title">PRICE UPDATOR</h4>
+                <h4 class="page-title">PRICE UPDATER</h4>
 
             </div>
 
             <div class="col-sm-4">
-                <button class="btn btn-primary" style="float: right;" routerLink="/addpriceupdator"> Add Price Updator</button>
+                <button class="btn btn-primary" style="float: right;" routerLink="/addpriceupdator"> Add Price Updater</button>
             </div>
         </div>
         <div class="row">
