--- a/src/app/home/category/edit-category/edit-category.component.html
+++ b/src/app/home/category/edit-category/edit-category.component.html
@@ -11,45 +11,68 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Add Category</h4>
+                <h4 class="page-title"> Edit Category</h4>
 
             </div>
         </div>
 
-        <div class="row">
+        <form [formGroup]="categoryFormRegistration">
 
-            <div class="col-sm-6">
-                <label for="">Category Name</label>
-                <input type="text" class="form-control" placeholder="Enter Your Category">
+            <div class="row">
+
+                <div class="col-sm-6">
+                    <label for="">Category Name</label>
+                    <input type="text" class="form-control" placeholder="Enter Your Category Name" [(ngModel)]="cname" [ngClass]="{ 'is-invalid': submitted && f.cname.errors }" formControlName="cname">
+
+                    <div *ngIf="submitted && f.cname.errors" class="invalid-feedback">
+                        <div *ngIf="f.cname.errors.required">Category name is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <label for="">Menu Type </label>
+
+                    <select name="" id="" class="form-control" [(ngModel)]="mtype" [ngClass]="{ 'is-invalid': submitted && f.mtype.errors }" formControlName="mtype">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option value="1">RESTAURANT TYPE</option>
+                        <option value="2">GENERAL TYPE</option>
+                    </select>
+                    <div *ngIf="submitted && f.mtype.errors" class="invalid-feedback">
+                        <div *ngIf="f.mtype.errors.required">Menu type is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <label for="">Category Image</label>
+                    <input class="form-control" placeholder="Enter Your Category Image" #file type="file" (change)="addcategoryimage($event)" [ngClass]="{ 'is-invalid': submitted && f.cimage.errors }" formControlName="cimage">
+
+                    <div *ngIf="submitted && f.cimage.errors" class="invalid-feedback">
+                        <div *ngIf="f.cimage.errors.required">Category image is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-6" style="margin-top: 20px;">
+                    <label for="">Show / Hide</label>
+                    <br> show
+                    <input type="radio" [(ngModel)]="showorhide" value="Show" formControlName="showorhide"> Hide
+                    <input type="radio" [(ngModel)]="showorhide" value="Hide" formControlName="showorhide">
+                </div>
+
+                <div class="col-sm-6" style="margin-top: 20px;">
+                    <label for="">Status</label>
+                    <br> Active
+                    <input type="radio" [(ngModel)]="status" value="Active" formControlName="status"> Inactive
+                    <input type="radio" [(ngModel)]="status" value="Inactive" formControlName="status">
+                </div>
+
+                <div class="col-sm-12">
+                    <button class="btn btn-warning" (click)="submit()">SUBMIT</button>
+                </div>
+
             </div>
-
-            <div class="col-sm-6">
-                <label for="">Category Image</label>
-                <input type="File" class="form-control" placeholder="Enter Your Category">
-            </div>
-
-            <div class="col-sm-6" style="margin-top: 20px;">
-                <label for="">Show / Hide</label>
-                <br>
-                show
-                <input type="radio">
-                Hide
-                <input type="radio">
-            </div>
-
-            <div class="col-sm-6" style="margin-top: 20px;">
-                <label for="">Status</label>
-                <br>
-                Active
-                <input type="radio">
-                Inactive
-                <input type="radio">
-            </div>
-
-            <div class="col-sm-12">
-                 <button class="btn btn-warning">SUBMIT</button>
-            </div>
-
-        </div>
+        </form>
     </div>
 </div>
