--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -60,7 +60,7 @@
                     <!-- <form class="form-signin" [formGroup]="loginForm"> -->
                     <div class="account-logo">
                         <a><img src="assets/img/EASY DEEL LOGO NEW.jpg" alt="">
-                            <h3> EASYDEEEL LOGIN</h3>
+                            <h3> EASYDEEL LOGIN</h3>
                         </a>
                     </div>
                     <div class="form-group">
