--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -34,7 +34,7 @@
             <div class="col-sm-4">
                 <div class="card" routerLink="/priceupdator">
                     <img src="./assets/img/icons8-price-tag-100.png" alt="" style="    height: 150px;">
-                    <h5>Price Updator</h5>
+                    <h5>Price Updater</h5>
 
                 </div>
             </div>
