--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,3 +1,35 @@
+/* .sidebar {
+    overflow: auto !important;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+    top: 50px;
+    width: 267px;
+    z-index: 1039;
+    background-color: #fff;
+    bottom: 0;
+    margin-top: 0px;
+    position: fixed;
+    left: 0;
+    transition: all 0.2s ease-in-out;
+} */
+
+.sidebar .sidebar-menu>ul>li>a span {
+    font-size: 14px;
+}
+
 .sidebar {
     overflow: auto !important;
 }
+
+
+/* .sidebar {
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+    top: 50px;
+    width: 270px;
+    z-index: 1039;
+    background-color: #fff;
+    bottom: 0;
+    margin-top: 0px;
+    position: fixed;
+    left: 0;
+    transition: all 0.2s ease-in-out;
+} */
