--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -12,27 +12,39 @@
                 </li>
 
                 <li routerLinkActive="active">
-                    <a routerLink="/shop"><i class="fa fa-coffee" ></i> <span> SHOP</span></a>
+                    <a routerLink="/shop"><i class="fa fa-coffee"></i> <span> SHOP REGISTER</span></a>
                 </li>
 
                 <li routerLinkActive="active">
-                    <a routerLink="/coursetype"><i class="fa fa-cutlery"></i> <span>COURSE TYPE</span></a>
+                    <a routerLink="/restaurantmenu"><i class="fa fa-cutlery"></i> <span> RESTAURANT ITEM MASTER</span></a>
                 </li>
 
                 <li routerLinkActive="active">
-                    <a routerLink="/restaurantmenu"><i class="fa fa-cutlery" ></i> <span> RESTAURANT MENU</span></a>
+                    <a routerLink="/generalmenu"><i class="fa fa-shopping-bag"></i> <span>GENERAL ITEM MASTER</span></a>
                 </li>
 
                 <li routerLinkActive="active">
-                    <a routerLink="/shopmenu"><i class="fa fa-shopping-cart"></i> <span>SHOP MENU</span></a>
+                    <a routerLink="/coursetype"><i class="fa fa-cutlery"></i> <span>RESTAURANT CATEGORY</span></a>
                 </li>
 
                 <li routerLinkActive="active">
-                    <a routerLink="/approvalrequest"><i class="fa fa-history"></i> <span>APPROVAL REQUEST</span></a>
+                    <a routerLink="/shopmenu"><i class="fa fa-shopping-cart"></i> <span>RESTAURANT MENU</span></a>
+                </li>
+
+                <li routerLinkActive="active">
+                    <a routerLink="/generalshopmenu"><i class="fa fa-apple"></i> <span>GENERAL SHOP MENU</span></a>
                 </li>
 
                 <li routerLinkActive="active">
                     <a routerLink="/offers"><i class="fa fa-gift"></i> <span>OFFERS</span></a>
+                </li>
+
+                <li routerLinkActive="active">
+                    <a routerLink="/deliveryboys"><img style="width: 20px;" src="https://cloud.githubusercontent.com/assets/11599785/6770296/b2b986b6-d09a-11e4-8c18-b1d6422a1f39.png" alt=""><span>DELIVERY BOY MASTER</span></a>
+                </li>
+
+                <li routerLinkActive="active">
+                    <a routerLink="/approvalrequest"><i class="fa fa-history"></i> <span>APPROVALS</span></a>
                 </li>
 
                 <li routerLinkActive="active">
@@ -43,21 +55,8 @@
                     <a routerLink="/preorders"><i class="fa fa-shopping-basket"></i> <span>PRE-ORDERS</span></a>
                 </li>
 
-
-                <li routerLinkActive="active">
-                    <a routerLink="/deliveryboys"><img style="width: 20px;" src="https://cloud.githubusercontent.com/assets/11599785/6770296/b2b986b6-d09a-11e4-8c18-b1d6422a1f39.png" alt=""><span>DELIVERY BOYS</span></a>
-                </li>
-
                 <li routerLinkActive="active">
                     <a routerLink="/users"><i class="fa fa-users"></i> <span>USERS</span></a>
-                </li>
-
-                <li routerLinkActive="active">
-                    <a routerLink="/generalmenu"><i class="fa fa-shopping-bag"></i> <span>GENERAL MENU</span></a>
-                </li>
-
-                <li routerLinkActive="active">
-                    <a routerLink="/generalshopmenu"><i class="fa fa-apple"></i> <span>GENERAL SHOP MENU</span></a>
                 </li>
 
                 <li routerLinkActive="active">
