--- a/src/app/home/shop-menu/shop-menu.component.html
+++ b/src/app/home/shop-menu/shop-menu.component.html
@@ -45,7 +45,7 @@
                     <!-- ID Column -->
                     <ng-container matColumnDef="id">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
-                        <mat-cell *matCellDef="let row; let i=index;"> SM{{i+1}} </mat-cell>
+                        <mat-cell *matCellDef="let row;let i=index"> {{i+1}} </mat-cell>
                     </ng-container>
 
                     <!--Menu Name Column -->
