--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -85,10 +85,10 @@
 
 
                     <!--Service Location Column -->
-                    <ng-container matColumnDef="servicelocation">
+                    <!-- <ng-container matColumnDef="servicelocation">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Service Location </mat-header-cell>
                         <mat-cell *matCellDef="let row"> {{row.locationId.location}} </mat-cell>
-                    </ng-container>
+                    </ng-container> -->
 
                     <!--Status Column -->
                     <ng-container matColumnDef="status">
