--- a/src/app/home/general-menu/add-general-menu/add-general-menu.component.html
+++ b/src/app/home/general-menu/add-general-menu/add-general-menu.component.html
@@ -47,6 +47,7 @@
 
                     <div *ngIf="submitted && f.des.errors" class="invalid-feedback">
                         <div *ngIf="f.des.errors.required">Description is required</div>
+                        <div *ngIf="f.des.errors.maxlength">Maximum 50 characters are allowed</div>
 
                     </div>
                 </div>
