--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -84,8 +84,8 @@
                     </ng-container>
 
 
-                    <!--Service Location Column -->
-                    <!-- <ng-container matColumnDef="servicelocation">
+                    <!-- Service Location Column
+                    <ng-container matColumnDef="servicelocation">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Service Location </mat-header-cell>
                         <mat-cell *matCellDef="let row"> {{row.locationId.location}} </mat-cell>
                     </ng-container> -->
