--- a/src/app/home/restaurant-menu/add-restaurant-menu/add-restaurant-menu.component.html
+++ b/src/app/home/restaurant-menu/add-restaurant-menu/add-restaurant-menu.component.html
@@ -36,7 +36,7 @@
 
                     <div *ngIf="submitted && f.mdes.errors" class="invalid-feedback">
                         <div *ngIf="f.mdes.errors.required">Menu description is required</div>
-
+                        <div *ngIf="f.mdes.errors.maxlength">Maximum 50 characters are allowed</div>
                     </div>
                 </div>
 
