--- a/src/app/offers/add-offers/add-offers.component.html
+++ b/src/app/offers/add-offers/add-offers.component.html
@@ -21,6 +21,17 @@
             <div class="row">
 
                 <div class="col-sm-4">
+                    <label for="">Shop Name</label>
+                    <input type="text" class="form-control" placeholder="Enter Your Shop Name" [(ngModel)]="sname" formControlName="sname">
+
+                    <div *ngIf="submitted && f.sname.errors" class="invalid-feedback">
+                        <div *ngIf="f.sname.errors.required">Shop name is required</div>
+
+                    </div>
+                </div>
+
+
+                <div class="col-sm-4">
                     <label for=""> Menu Name</label>
                     <input type="text" class="form-control" placeholder="Enter Your Menu Name" [(ngModel)]="mname" formControlName="mname">
 
@@ -121,6 +132,17 @@
 
                     </div>
                 </div>
+
+                <div class="col-sm-4">
+                    <label for="">Cashback Amount</label>
+                    <input type="number" class="form-control" placeholder="Enter Your Cashback Amount" [(ngModel)]="cashback" [ngClass]="{ 'is-invalid': submitted && f.cashback.errors }" formControlName="cashback">
+
+                    <div *ngIf="submitted && f.cashback.errors" class="invalid-feedback">
+                        <div *ngIf="f.cashback.errors.required">Closing time is required</div>
+
+                    </div>
+                </div>
+
 
 
                 <div class="col-sm-4">
