--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
 
 
                 <li routerLinkActive="active">
-                    <a routerLink="/home"><i class="fa fa-dashboard"></i> <span>CATEGORY</span></a>
+                    <a routerLink="/home"><i class="fa fa-dashboard"></i> <span>MAIN CATEGORY</span></a>
                 </li>
 
                 <li routerLinkActive="active">
@@ -29,6 +29,10 @@
 
                 <li routerLinkActive="active">
                     <a routerLink="/shopmenu"><i class="fa fa-shopping-cart"></i> <span>RESTAURANT MENU</span></a>
+                </li>
+
+                <li routerLinkActive="active">
+                    <a routerLink="/generalcategory"><i class="fa fa-shopping-cart"></i> <span>GENERAL CATEGORY</span></a>
                 </li>
 
                 <li routerLinkActive="active">
