--- a/src/app/general-category/general-category.component.html
+++ b/src/app/general-category/general-category.component.html
@@ -3,20 +3,17 @@
 
 <div class="page-wrapper">
 
-
-
-
     <div class="content">
 
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title">GENERAL MENU</h4>
+                <h4 class="page-title">General Category Type</h4>
 
             </div>
 
             <div class="col-sm-4">
-                <button class="btn btn-primary" style="float: right;" routerLink="/addgeneralmenu"> Add General Menu</button>
+                <button class="btn btn-primary" style="float: right;" routerLink="/addgeneralcategory"> Add General Category Type</button>
             </div>
         </div>
         <div class="row">
@@ -24,31 +21,21 @@
 
                 <mat-table [dataSource]="dataSource" matSort>
 
-                    <!--ID Column -->
+                    <!--Image Column -->
                     <ng-container matColumnDef="id">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
-                        <mat-cell *matCellDef="let row;let index;"> G{{i+1}} </mat-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Id </mat-header-cell>
+                        <mat-cell *matCellDef="let row;let i=index;"> C{{i+1}} </mat-cell>
                     </ng-container>
 
-                    <!--ID Column -->
-                    <ng-container matColumnDef="shopname">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Shop Name </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.shop_id.shop_name}} </mat-cell>
+
+                    <!-- Menu Description Column -->
+                    <ng-container matColumnDef="categorytype">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Category Type</mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.category_name}} </mat-cell>
                     </ng-container>
 
-                    <!-- Item Name Column -->
-                    <ng-container matColumnDef="itemname">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Item Name</mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.item_name}} </mat-cell>
-                    </ng-container>
 
-                    <!-- Item Image Column -->
-                    <ng-container matColumnDef="itemimage">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Item Image </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> <img src="{{apiUrl}}/generalitem/get/image/{{row._id}}" alt="" width="100px"> </mat-cell>
-                    </ng-container>
-
-                    <!-- Action Column -->
+                    <!--Action Column -->
                     <ng-container matColumnDef="action">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
                         <mat-cell *matCellDef="let row">
@@ -59,6 +46,7 @@
 
                         </mat-cell>
                     </ng-container>
+
 
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: displayedColumns;">
