--- a/src/app/home/category/add-category/add-category.component.html
+++ b/src/app/home/category/add-category/add-category.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Add Category</h4>
+                <h4 class="page-title"> Add Main Category</h4>
 
             </div>
         </div>
