--- a/src/app/home/category/category.component.html
+++ b/src/app/home/category/category.component.html
@@ -11,12 +11,12 @@
 
         <div class="row">
             <div class="col-sm-3">
-                <h4 class="page-title">Category</h4>
+                <h4 class="page-title">Main Category</h4>
 
             </div>
             <div class="col-sm-4">
 
-                <button class="btn btn-primary" style="float: right;" routerLink="/addcategory"> Add Category</button>
+                <button class="btn btn-primary" style="float: right;" routerLink="/addcategory"> Add Main Category</button>
             </div>
             <div class="col-sm-5">
                 <input type="text" class="form-control" placeholder="search here">
