--- a/src/app/home/general-menu/add-general-menu/add-general-menu.component.html
+++ b/src/app/home/general-menu/add-general-menu/add-general-menu.component.html
@@ -18,12 +18,27 @@
         <form [formGroup]="generalmenuFormRegistration">
             <div class="row">
 
+                <div class="col-sm-4">
+                    <label for=""> Shop Name</label>
+
+                    <select name="" id="" class="form-control" [(ngModel)]="sname" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option *ngFor="let s of shops" value="{{s._id}}">{{s.shop_name}}</option>
+                    </select>
+                    <div *ngIf="submitted && f.sname.errors" class="invalid-feedback">
+                        <div *ngIf="f.sname.errors.required">Shop name is required</div>
+
+                    </div>
+                </div>
 
 
                 <div class="col-sm-4">
                     <label for=""> Category Name</label>
-                    <input type="text" class="form-control" placeholder="Enter Your Category" [(ngModel)]="cname" [ngClass]="{ 'is-invalid': submitted && f.cname.errors }" formControlName="cname">
 
+                    <select name="" id="" class="form-control" [(ngModel)]="cname" [ngClass]="{ 'is-invalid': submitted && f.cname.errors }" formControlName="cname">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option *ngFor="let c of category" value="{{c._id}}">{{c.category_name}}</option>
+                    </select>
                     <div *ngIf="submitted && f.cname.errors" class="invalid-feedback">
                         <div *ngIf="f.cname.errors.required">Category name is required</div>
 
@@ -54,12 +69,28 @@
 
                 <div class="col-sm-4">
                     <label for="">Item Image</label>
-                    <input type="file" class="form-control" placeholder="Enter the Item Image" [(ngModel)]="iimage" [ngClass]="{ 'is-invalid': submitted && f.iimage.errors }" formControlName="iimage">
+
+
+                    <input class="form-control" placeholder="Enter Your Category Image" #file type="file" (change)="additemimage($event)" [ngClass]="{ 'is-invalid': submitted && f.iimage.errors }" formControlName="iimage">
 
                     <div *ngIf="submitted && f.iimage.errors" class="invalid-feedback">
                         <div *ngIf="f.iimage.errors.required">Item is required</div>
 
                     </div>
+                </div>
+
+                <div class="col-sm-4" style="margin-top: 20px;">
+                    <label for="">Show / Hide</label>
+                    <br> show
+                    <input type="radio" [(ngModel)]="showorhide" value="Show" formControlName="showorhide"> Hide
+                    <input type="radio" [(ngModel)]="showorhide" value="Hide" formControlName="showorhide">
+                </div>
+
+                <div class="col-sm-4" style="margin-top: 20px;">
+                    <label for="">Status</label>
+                    <br> Active
+                    <input type="radio" [(ngModel)]="status" value="Active" formControlName="status"> Inactive
+                    <input type="radio" [(ngModel)]="status" value="Inactive" formControlName="status">
                 </div>
 
 
