--- a/src/app/home/general-shop-menu/add-general-shop-menu/add-general-shop-menu.component.html
+++ b/src/app/home/general-shop-menu/add-general-shop-menu/add-general-shop-menu.component.html
@@ -18,6 +18,46 @@
         <form [formGroup]="generalshopmenuFormRegistration">
             <div class="row">
 
+                <div class="col-sm-4">
+                    <label for=""> Shop Name</label>
+
+                    <select name="" id="" class="form-control" [(ngModel)]="sname" (change)="shopselcted(sname)" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option *ngFor="let s of results" value="{{s._id}}" >{{s.shop_name}}</option>
+                    </select>
+                    <div *ngIf="submitted && f.sname.errors" class="invalid-feedback">
+                        <div *ngIf="f.sname.errors.required">Shop name is required</div>
+
+                    </div>
+                </div>
+
+
+                <div class="col-sm-4">
+                    <label for=""> Category Name</label>
+
+                    <select name="" id="" class="form-control" [(ngModel)]="cname" (change)="shopselcted(cname)" [ngClass]="{ 'is-invalid': submitted && f.cname.errors }" formControlName="cname">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option *ngFor="let s of cat" value="{{s._id}}" >{{s.category_name}}</option>
+                    </select>
+                    <div *ngIf="submitted && f.cname.errors" class="invalid-feedback">
+                        <div *ngIf="f.cname.errors.required">Category name is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for=""> Item Name</label>
+
+                    <select name="" id="" class="form-control" [(ngModel)]="iname" (change)="shopselcted(iname)" [ngClass]="{ 'is-invalid': submitted && f.iname.errors }" formControlName="iname">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option *ngFor="let s of generalmenu" value="{{s._id}}" >{{s.item_name}}</option>
+                    </select>
+                    <div *ngIf="submitted && f.iname.errors" class="invalid-feedback">
+                        <div *ngIf="f.iname.errors.required">Item name is required</div>
+
+                    </div>
+                </div>
+
 
 
                 <div class="col-sm-4">
@@ -81,19 +121,19 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4" style="margin-top: 20px;">
+                <!-- <div class="col-sm-4" style="margin-top: 20px;">
                     <label for="">Show / Hide</label>
                     <br> show
-                    <input type="radio"> Hide
-                    <input type="radio">
+                    <input type="radio" [(ngModel)]="showorhide" value="Show" formControlName="showorhide"> Hide
+                    <input type="radio" [(ngModel)]="showorhide" value="Hide" formControlName="showorhide">
                 </div>
 
                 <div class="col-sm-4" style="margin-top: 20px;">
                     <label for="">Status</label>
                     <br> Active
-                    <input type="radio"> Inactive
-                    <input type="radio">
-                </div>
+                    <input type="radio" [(ngModel)]="status" value="Active" formControlName="status"> Inactive
+                    <input type="radio" [(ngModel)]="status" value="Inactive" formControlName="status">
+                </div> -->
 
 
 
