--- a/src/app/home/shop-menu/shop-menu.component.html
+++ b/src/app/home/shop-menu/shop-menu.component.html
@@ -88,7 +88,11 @@
                     <!-- Action Column -->
                     <ng-container matColumnDef="action">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> <i class="fa fa-edit"></i> </mat-cell>
+                        <mat-cell *matCellDef="let row"> <button class="btn btn-success"> <i class="fa fa-edit"></i></button>&nbsp;
+                            <button class="btn btn-warning" (click)="active(row)" *ngIf="row.status == 'Inactive'">Active </button>&nbsp;
+                            <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.status == 'Active'">In-Active </button>
+
+                        </mat-cell>
                     </ng-container>
 
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
