--- a/src/app/coursetype/coursetype.component.html
+++ b/src/app/coursetype/coursetype.component.html
@@ -35,11 +35,18 @@
                     </ng-container>
 
 
-                    <!--Location Column -->
+                    <!--Action Column -->
                     <ng-container matColumnDef="action">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                            <i class="fa fa-edit"></i>
+                            <button class="btn btn-success">
+                            <i class="fa fa-edit" (click)="edit(row)"></i>
+
+
+                            </button>
+                            <button class="btn btn-warning" (click)="active(row)" *ngIf="row.menu_state == 'Inactive'">Active </button>&nbsp;
+                            <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.menu_state == 'Active'">In-Active  </button>
+
                         </mat-cell>
                     </ng-container>
 
