--- a/src/app/coursetype/edit-coursetype/edit-coursetype.component.html
+++ b/src/app/coursetype/edit-coursetype/edit-coursetype.component.html
@@ -1,1 +1,47 @@
-<p>edit-coursetype works!</p>
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+
+<div class="page-wrapper">
+
+
+
+
+    <div class="content">
+
+
+        <div class="row">
+            <div class="col-sm-8">
+                <h4 class="page-title"> Edit Restaurant Type</h4>
+
+            </div>
+        </div>
+
+        <form [formGroup]="coursetypeFormRegistration">
+
+            <div class="row">
+
+                <div class="col-sm-6">
+                    <label for="">Course Type </label>
+
+                    <!-- <select name="" id="" class="form-control" [(ngModel)]="ctype" [ngClass]="{ 'is-invalid': submitted && f.ctype.errors }" formControlName="ctype">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option value="Starter">STARTER</option>
+                        <option value="Breakfast">BREAKFAST</option>
+                        <option value="Lunch">LUNCH</option>
+                        <option value="Dinner">DINNER</option>
+                        <option value="Deserts">DESERTS</option>
+                    </select> -->
+                    <input type="text" class="form-control" [(ngModel)]="ctype" [ngClass]="{ 'is-invalid': submitted && f.ctype.errors }" formControlName="ctype" placeholder="Enter course type">
+                    <div *ngIf="submitted && f.ctype.errors" class="invalid-feedback">
+                        <div *ngIf="f.ctype.errors.required">Course type is required</div>
+
+                    </div>
+                </div>
+                <div class="col-sm-12">
+                    <button class="btn btn-warning" (click)="submit()">SUBMIT</button>
+                </div>
+            </div>
+
+        </form>
+    </div>
+</div>
