--- a/src/app/home/category/category.component.html
+++ b/src/app/home/category/category.component.html
@@ -52,8 +52,8 @@
                         <mat-cell *matCellDef="let row">
                             <button class="btn btn-success" (click)=edit(row)><i class="fa fa-edit" style="color: white;"></i></button> &nbsp;
 
-                            <button class="btn btn-warning" *ngIf="row.category_state == 'Inactive'">Active </button>&nbsp;
-                            <button class="btn btn-danger" *ngIf="row.category_state == 'Active'">In-Active  </button>
+                            <button class="btn btn-warning" (click)="active(row)" *ngIf="row.category_state == 'Inactive'">Active </button>&nbsp;
+                            <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.category_state == 'Active'">In-Active  </button>
 
                         </mat-cell>
                     </ng-container>
