--- a/src/app/home/general-shop-menu/edit-general-shop-menu/edit-general-shop-menu.component.html
+++ b/src/app/home/general-shop-menu/edit-general-shop-menu/edit-general-shop-menu.component.html
@@ -11,70 +11,138 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Add General Shop Menu</h4>
+                <h4 class="page-title"> Edit General Shop Menu</h4>
 
             </div>
         </div>
+        <form [formGroup]="generalshopmenuFormRegistration">
+            <div class="row">
 
-        <div class="row">
+                <div class="col-sm-4">
+                    <label for=""> Shop Name</label>
 
-            
+                    <select name="" id="" class="form-control" [(ngModel)]="sname" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option *ngFor="let s of results" value="{{s._id}}" >{{s.shop_name}}</option>
+                    </select>
+                    <div *ngIf="submitted && f.sname.errors" class="invalid-feedback">
+                        <div *ngIf="f.sname.errors.required">Shop name is required</div>
 
-            <div class="col-sm-4">
-                <label for=""> Item Quantity </label>
-                <input type="number" class="form-control" placeholder="Enter Your Item Quantity">
+                    </div>
+                </div>
+
+
+                <div class="col-sm-4">
+                    <label for=""> Category Name</label>
+
+                    <select name="" id="" class="form-control" [(ngModel)]="cname" [ngClass]="{ 'is-invalid': submitted && f.cname.errors }" formControlName="cname">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option *ngFor="let s of cat" value="{{s._id}}" >{{s.category_name}}</option>
+                    </select>
+                    <div *ngIf="submitted && f.cname.errors" class="invalid-feedback">
+                        <div *ngIf="f.cname.errors.required">Category name is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for=""> Item Name</label>
+
+                    <select name="" id="" class="form-control" [(ngModel)]="iname" [ngClass]="{ 'is-invalid': submitted && f.iname.errors }" formControlName="iname">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option *ngFor="let s of generalmenu" value="{{s._id}}" >{{s.item_name}}</option>
+                    </select>
+                    <div *ngIf="submitted && f.iname.errors" class="invalid-feedback">
+                        <div *ngIf="f.iname.errors.required">Item name is required</div>
+
+                    </div>
+                </div>
+
+
+
+                <div class="col-sm-4">
+                    <label for=""> Item Quantity </label>
+                    <input type="number" class="form-control" placeholder="Enter Your Item Quantity" [(ngModel)]="iquant" [ngClass]="{ 'is-invalid': submitted && f.iquant.errors }" formControlName="iquant">
+
+                    <div *ngIf="submitted && f.iquant.errors" class="invalid-feedback">
+                        <div *ngIf="f.iquant.errors.required">Item quantity is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for="">Item Price</label>
+                    <input type="number" class="form-control" placeholder="Enter Your Item Price" [(ngModel)]="iprice" [ngClass]="{ 'is-invalid': submitted && f.iprice.errors }" formControlName="iprice">
+
+                    <div *ngIf="submitted && f.iprice.errors" class="invalid-feedback">
+                        <div *ngIf="f.iprice.errors.required">Item price is required</div>
+
+                    </div>
+                </div>
+
+
+                <div class="col-sm-4">
+                    <label for="">Item Sales Rate</label>
+                    <input type="number" class="form-control" placeholder="Enter the Item Sales Rate" [(ngModel)]="israte" [ngClass]="{ 'is-invalid': submitted && f.israte.errors }" formControlName="israte">
+
+                    <div *ngIf="submitted && f.israte.errors" class="invalid-feedback">
+                        <div *ngIf="f.israte.errors.required">Item sales rate is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for="">Item MRP</label>
+                    <input type="number" class="form-control" placeholder="Enter the Item MRP" [(ngModel)]="imrp" [ngClass]="{ 'is-invalid': submitted && f.imrp.errors }" formControlName="imrp">
+
+                    <div *ngIf="submitted && f.imrp.errors" class="invalid-feedback">
+                        <div *ngIf="f.imrp.errors.required">Item MRP is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for="">Item Discount Amount</label>
+                    <input type="number" class="form-control" placeholder="Enter the Item Discount Amount" [(ngModel)]="idamount" [ngClass]="{ 'is-invalid': submitted && f.idamount.errors }" formControlName="idamount">
+
+                    <div *ngIf="submitted && f.idamount.errors" class="invalid-feedback">
+                        <div *ngIf="f.idamount.errors.required">Item discount amount is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for="">Item Discount Percentage</label>
+                    <input type="number" class="form-control" placeholder="Enter the Item Discount Percentage" [(ngModel)]="idpercent" [ngClass]="{ 'is-invalid': submitted && f.idpercent.errors }" formControlName="idpercent">
+
+                    <div *ngIf="submitted && f.idpercent.errors" class="invalid-feedback">
+                        <div *ngIf="f.idpercent.errors.required">Item discount percentage is required</div>
+
+                    </div>
+                </div>
+
+                <!-- <div class="col-sm-4" style="margin-top: 20px;">
+                    <label for="">Show / Hide</label>
+                    <br> show
+                    <input type="radio" [(ngModel)]="showorhide" value="Show" formControlName="showorhide"> Hide
+                    <input type="radio" [(ngModel)]="showorhide" value="Hide" formControlName="showorhide">
+                </div>
+
+                <div class="col-sm-4" style="margin-top: 20px;">
+                    <label for="">Status</label>
+                    <br> Active
+                    <input type="radio" [(ngModel)]="status" value="Active" formControlName="status"> Inactive
+                    <input type="radio" [(ngModel)]="status" value="Inactive" formControlName="status">
+                </div> -->
+
+
+
+                <div class="col-sm-12">
+                    <button class="btn btn-warning" (click)="submit()">SUBMIT</button>
+                </div>
+
             </div>
+        </form>
 
-            <div class="col-sm-4">
-                <label for="">Item Price</label>
-                <input type="number" class="form-control" placeholder="Enter Your Item Price">
-            </div>
-
-            
-            <div class="col-sm-4">
-                <label for="">Item Sales Rate</label>
-                <input type="number" class="form-control" placeholder="Enter the Item Sales Rate">
-            </div>
-
-            <div class="col-sm-4">
-                <label for="">Item MRP</label>
-                <input type="number" class="form-control" placeholder="Enter the Item MRP">
-            </div>
-
-            <div class="col-sm-4">
-                <label for="">Item Discount Amount</label>
-                <input type="number" class="form-control" placeholder="Enter the Item Discount Amount">
-            </div>
-
-            <div class="col-sm-4">
-                <label for="">Item Discount Percentage</label>
-                <input type="number" class="form-control" placeholder="Enter the Item Discount Percentage">
-            </div>
-
-            <div class="col-sm-4" style="margin-top: 20px;">
-                <label for="">Show / Hide</label>
-                <br>
-                show
-                <input type="radio">
-                Hide
-                <input type="radio">
-            </div>
-
-            <div class="col-sm-4" style="margin-top: 20px;">
-                <label for="">Status</label>
-                <br>
-                Active
-                <input type="radio">
-                Inactive
-                <input type="radio">
-            </div>
-
-
-
-            <div class="col-sm-12">
-                 <button class="btn btn-warning">SUBMIT</button>
-            </div>
-
-        </div>
     </div>
 </div>
