--- a/src/app/home/restaurant-menu/edit-restaurant-menu/edit-restaurant-menu.component.html
+++ b/src/app/home/restaurant-menu/edit-restaurant-menu/edit-restaurant-menu.component.html
@@ -11,59 +11,82 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Add Restaurant Menu</h4>
+                <h4 class="page-title"> Edit Restaurant Menu</h4>
 
             </div>
         </div>
 
-        <div class="row">
+        <form [formGroup]="restaurantmenuFormRegistration">
 
-            <div class="col-sm-4">
-                <label for=""> Menu Name</label>
-                <input type="text" class="form-control" placeholder="Enter Your Menu Name">
+            <div class="row">
+
+                <div class="col-sm-4">
+                    <label for=""> Menu Name</label>
+                    <input type="text" class="form-control" placeholder="Enter Your Menu Name" [(ngModel)]="mname" [ngClass]="{ 'is-invalid': submitted && f.mname.errors }" formControlName="mname">
+
+                    <div *ngIf="submitted && f.mname.errors" class="invalid-feedback">
+                        <div *ngIf="f.mname.errors.required">Menu name is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for="">Menu Description </label>
+                    <input type="text" class="form-control" placeholder="Enter the Menu Description" [(ngModel)]="mdes" [ngClass]="{ 'is-invalid': submitted && f.mdes.errors }" formControlName="mdes">
+
+                    <div *ngIf="submitted && f.mdes.errors" class="invalid-feedback">
+                        <div *ngIf="f.mdes.errors.required">Menu description is required</div>
+                        <div *ngIf="f.mdes.errors.maxlength">Maximum 50 characters are allowed</div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for="">Menu Type </label>
+
+                    <select name="" id="" class="form-control" [(ngModel)]="mtype" [ngClass]="{ 'is-invalid': submitted && f.mtype.errors }" formControlName="mtype">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option value="Veg">VEG</option>
+                        <option value="Non Veg">NON-VEG</option>
+                    </select>
+                    <div *ngIf="submitted && f.mtype.errors" class="invalid-feedback">
+                        <div *ngIf="f.mtype.errors.required">Menu type is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for="">Course Type </label>
+
+                    <select name="" id="" class="form-control" [(ngModel)]="ctype" [ngClass]="{ 'is-invalid': submitted && f.ctype.errors }" formControlName="ctype">
+                        <option value="" disabled selected>Choose a option </option>
+                        <option value="{{result._id}}" *ngFor="let result of result">{{result.cource_name}}</option>
+                       
+                    </select>
+                    <div *ngIf="submitted && f.ctype.errors" class="invalid-feedback">
+                        <div *ngIf="f.ctype.errors.required">Course type is required</div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <label for="">Menu Images </label>
+
+                    <input class="form-control" #file type="file" (change)="addmenuimage($event)" [ngClass]="{ 'is-invalid': submitted && f.mimages.errors }" formControlName="mimages">
+                    <div *ngIf="submitted && f.mimages.errors" class="invalid-feedback">
+                        <div *ngIf="f.mimages.errors.required">Menu images is required</div>
+
+                    </div>
+                </div>
+
+
+
+
+                <div class="col-sm-12">
+                    <button class="btn btn-warning" (click)="submit()">SUBMIT</button>
+                </div>
+
             </div>
 
-            <div class="col-sm-4">
-                <label for="">Menu Description </label>
-                <input type="text" class="form-control" placeholder="Enter the Menu Description">
-            </div>
-
-            <div class="col-sm-4">
-                <label for="">Menu Type </label>
-                
-                <select name="" id="" class="form-control">
-                    <option value="Choose a option" disabled selected>Choose a option </option>
-                    <option value="veg">VEG</option>
-                    <option value="non-veg">NON-VEG</option>
-                </select>
-            </div>
-
-            <div class="col-sm-4">
-                <label for="">Course Type </label>
-                
-                <select name="" id="" class="form-control">
-                    <option value="Choose a option" disabled selected>Choose a option </option>
-                    <option value="Starter">STARTER</option>
-                    <option value="Breakfast">BREAKFAST</option>
-                    <option value="Lunch">LUNCH</option>
-                    <option value="Dinner">DINNER</option>
-                    <option value="Deserts">DESERTS</option>
-                </select>
-            </div>
-
-            <div class="col-sm-4">
-                <label for="">Menu Images </label>
-                <input type="file" class="form-control" placeholder="Enter Your Menu Images">
-            </div>
-
-            
-
-
-            <div class="col-sm-12">
-                 <button class="btn btn-warning">SUBMIT</button>
-            </div>
-
-        </div>
+        </form>
     </div>
 </div>
-
