--- a/src/app/home/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/home/restaurant-menu/restaurant-menu.component.html
@@ -73,7 +73,14 @@
                 <!-- Action Column -->
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
-                    <mat-cell *matCellDef="let row"> <i class="fa fa-edit"></i> </mat-cell>
+                    <mat-cell *matCellDef="let row">
+                        <button class="btn btn-success" (click)=edit(row)><i class="fa fa-edit" style="color: white;"></i></button> &nbsp;
+
+                        <button class="btn btn-warning" (click)="active(row)" *ngIf="row.state == 'Inactive'">Active </button>&nbsp;
+                        <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.state == 'Active'">In-Active  </button>
+
+                    </mat-cell>
+
                 </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
