--- a/src/app/offers/add-offers/add-offers.component.html
+++ b/src/app/offers/add-offers/add-offers.component.html
@@ -25,7 +25,7 @@
 
                     <select name="" id="" class="form-control" [(ngModel)]="sname" (change)="shopselcted(sname)" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
                         <option value="" disabled selected>Choose a option </option>
-                        <option *ngFor="let s of shops" value="{{s._id}}" >{{s.shop_name}}</option>
+                        <option *ngFor="let s of shops" value="{{s._id}}">{{s.shop_name}}</option>
                     </select>
                     <div *ngIf="submitted && f.sname.errors" class="invalid-feedback">
                         <div *ngIf="f.sname.errors.required">Shop name is required</div>
@@ -47,7 +47,7 @@
                     <label for=""> Offer Location</label>
                     <select name="" id="" class="form-control" [(ngModel)]="oloc" (change)="shopselcted(oloc)" [ngClass]="{ 'is-invalid': submitted && f.oloc.errors }" formControlName="oloc">
                         <option value="" disabled selected>Choose a option </option>
-                        <option *ngFor="let l of locations" value="{{s._id}}" >{{s.offerlocation}}</option>
+                        <option *ngFor="let l of locations" value="{{s._id}}">{{s.offerlocation}}</option>
                     </select>
                     <div *ngIf="submitted && f.oloc.errors" class="invalid-feedback">
                         <div *ngIf="f.oloc.errors.required">Offer Location is required</div>
@@ -151,7 +151,8 @@
 
                 <div class="col-sm-4">
                     <label for="">Banner Images </label>
-                    <input type="file" class="form-control" placeholder="Enter Your Banner Images" [(ngModel)]="bimages" [ngClass]="{ 'is-invalid': submitted && f.bimages.errors }" formControlName="bimages">
+                    <!-- <input type="file" class="form-control" placeholder="Enter Your Banner Images" [(ngModel)]="bimages" [ngClass]="{ 'is-invalid': submitted && f.bimages.errors }" formControlName="bimages"> -->
+                    <input class="form-control" #file type="file" (change)="addshopimage($event)" [ngClass]="{ 'is-invalid': submitted && f.bimages.errors }" formControlName="bimages">
 
                     <div *ngIf="submitted && f.bimages.errors" class="invalid-feedback">
                         <div *ngIf="f.bimages.errors.required">Banner images is required</div>
