--- a/src/app/home/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/home/restaurant-menu/restaurant-menu.component.html
@@ -76,8 +76,8 @@
                     <mat-cell *matCellDef="let row">
                         <button class="btn btn-success" (click)=edit(row)><i class="fa fa-edit" style="color: white;"></i></button> &nbsp;
 
-                        <button class="btn btn-warning" (click)="active(row)" *ngIf="row.state == 'Inactive'">Active </button>&nbsp;
-                        <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.state == 'Active'">In-Active  </button>
+                        <button class="btn btn-warning" (click)="active(row)" *ngIf="row.menu_state == 'Inactive'">Active </button>&nbsp;
+                        <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.menu_state == 'Active'">In-Active  </button>
 
                     </mat-cell>
 
